--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,8 @@
 - TODO Rotating-Cube:
-1. Save each object's actual settings (scale, rotation_speed, position, etc.) after changing to another object
-   so when I go back to the object, it will be the same as I left it.
 
-2. Change the type of projection to perspective projection
+1. Make the camera rotate around the target point (fix view matrix)
+   (will probably need to switch to homogeneous coordinates for that)
 
-3. Be able to scale down more for the bigger models (like the truck.obj) // update: I added a temporary fix that probably only works for the truck
-
-4. render colors
-
-5. more...
+2. Add multiples objects in the scene
 
 --> Still made by Fsubject
